[tool.poetry]
name = "test-mlflow-python3-11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "test_mlflow_python3"}]

[tool.poetry.dependencies]
python = "~3.11"
mlflow = "^2.19.0"
boto3 = "^1.35.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
